platform: plugin URL / plugin download URL separated